# generic_transitive_from

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
