[package]
name = "generic_transitive_from"
version = "1.0.0"
authors = ["FZs", "Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Helper macros for creating hierarchies of transitive `From` implementations with support for lifetimes/generics.
"""
repository = "https://github.com/fzs111/generic_transitive_from"
homepage = "https://github.com/fzs111/generic_transitive_from"
keywords = ["derive", "From"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
